log
vi., 11 de mar. de 2022 15:45:11: 
./test.sh: line 26: gcc: command not found
Compilation failed
c97657f
vi., 11 de mar. de 2022 16:15:28: 
./test.sh: line 26: gcc: command not found
Compilation failed
af30f5b
vi., 11 de mar. de 2022 16:16:20: 
./test.sh: line 26: gcc: command not found
Compilation failed
48d616c
vi., 11 de mar. de 2022 16:32:33: 
./test.sh: line 26: gcc: command not found
Compilation failed
b3df521
vi., 11 de mar. de 2022 16:42:17: 
./test.sh: line 26: gcc: command not found
Compilation failed
e1d253b
vi., 11 de mar. de 2022 16:44:48: 
 tests:  0|7
total_score: 0/70
739573d
vi., 11 de mar. de 2022 22:05:51: 
 tests:  0|7
total_score: 0/70
19065e8
vi., 11 de mar. de 2022 22:16:07: 
 exercises.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'suma':
exercises.c:16:11: error: 'return' with a value, in function returning void [-Werror]
    return c;
           ^
exercises.c:14:6: note: declared here
 void suma(int a, int b, int * c) {
      ^~~~
exercises.c: In function 'crearPersona':
exercises.c:66:8: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
    nre = (int*)malloc(sizeof(Persona));
        ^
exercises.c:69:11: error: passing argument 1 of 'strcpy' makes pointer from integer without a cast [-Werror=int-conversion]
    strcpy(nre->edad, edad);
           ^~~
In file included from test.c:3:0:
c:\mingw\include\string.h:79:40: note: expected 'char *' but argument is of type 'int'
 _CRTIMP __cdecl __MINGW_NOTHROW  char *strcpy (char *, const char *);
                                        ^~~~~~
In file included from test.c:5:0:
exercises.c:69:22: error: passing argument 2 of 'strcpy' makes pointer from integer without a cast [-Werror=int-conversion]
    strcpy(nre->edad, edad);
                      ^~~~
In file included from test.c:3:0:
c:\mingw\include\string.h:79:40: note: expected 'const char *' but argument is of type 'int'
 _CRTIMP __cdecl __MINGW_NOTHROW  char *strcpy (char *, const char *);
                                        ^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
11120ca
vi., 11 de mar. de 2022 22:16:49: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'suma':
exercises.c:16:11: error: 'return' with a value, in function returning void [-Werror]
    return *c;
           ^~
exercises.c:14:6: note: declared here
 void suma(int a, int b, int * c) {
      ^~~~
exercises.c: In function 'crearPersona':
exercises.c:66:8: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
    nre = (int*)malloc(sizeof(Persona));
        ^
exercises.c:69:11: error: passing argument 1 of 'strcpy' makes pointer from integer without a cast [-Werror=int-conversion]
    strcpy(nre->edad, edad);
           ^~~
In file included from test.c:3:0:
c:\mingw\include\string.h:79:40: note: expected 'char *' but argument is of type 'int'
 _CRTIMP __cdecl __MINGW_NOTHROW  char *strcpy (char *, const char *);
                                        ^~~~~~
In file included from test.c:5:0:
exercises.c:69:22: error: passing argument 2 of 'strcpy' makes pointer from integer without a cast [-Werror=int-conversion]
    strcpy(nre->edad, edad);
                      ^~~~
In file included from test.c:3:0:
c:\mingw\include\string.h:79:40: note: expected 'const char *' but argument is of type 'int'
 _CRTIMP __cdecl __MINGW_NOTHROW  char *strcpy (char *, const char *);
                                        ^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
a7e0bb8
vi., 11 de mar. de 2022 22:17:16: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crearPersona':
exercises.c:65:8: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
    nre = (int*)malloc(sizeof(Persona));
        ^
exercises.c:68:11: error: passing argument 1 of 'strcpy' makes pointer from integer without a cast [-Werror=int-conversion]
    strcpy(nre->edad, edad);
           ^~~
In file included from test.c:3:0:
c:\mingw\include\string.h:79:40: note: expected 'char *' but argument is of type 'int'
 _CRTIMP __cdecl __MINGW_NOTHROW  char *strcpy (char *, const char *);
                                        ^~~~~~
In file included from test.c:5:0:
exercises.c:68:22: error: passing argument 2 of 'strcpy' makes pointer from integer without a cast [-Werror=int-conversion]
    strcpy(nre->edad, edad);
                      ^~~~
In file included from test.c:3:0:
c:\mingw\include\string.h:79:40: note: expected 'const char *' but argument is of type 'int'
 _CRTIMP __cdecl __MINGW_NOTHROW  char *strcpy (char *, const char *);
                                        ^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
014d752
vi., 11 de mar. de 2022 22:18:44: 
 exercises.c | 7 +------
 1 file changed, 1 insertion(+), 6 deletions(-)
 tests:  1|6
total_score: 10/70
620bcca
